[package]
name = "net-bench"
version = "0.1.0"
edition = "2021"

[dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_Networking_WinHttp",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_IO",
    "Win32_Networking_HttpServer",
    "Win32_Networking_WinSock",
    "Win32_Storage_FileSystem"
]

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
rand = "0.8.5"
reqwest = { version = "0.11.26", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
winapi = "0.3.9"
plotters = "0.3.7"
